<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="plus_three_points">+3 Points</string>
    <string name="plus_two_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="team_b">Team B</string>
    <!-- <string name="zero">0</string> -->
     <string name="reset">Reset</string>
     <string name="zero">0</string>
 </resources>
