<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fiftysix_dp"
        android:background="@color/orange_light" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ball"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:paddingBottom="@dimen/sixteen_dp"
                        android:paddingTop="@dimen/sixteen_dp"
                        android:text="@string/team_a"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/fourteen_sp" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/twentyfour_dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fiftysix_dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/eight_dp"
                        android:layout_marginLeft="@dimen/twentyfour_dp"
                        android:layout_marginRight="@dimen/twentyfour_dp"
                        android:onClick="threePointsA"
                        android:text="@string/plus_three_points" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/eight_dp"
                        android:layout_marginLeft="@dimen/twentyfour_dp"
                        android:layout_marginRight="@dimen/twentyfour_dp"
                        android:onClick="twoPointsA"
                        android:text="@string/plus_two_points" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/twentyfour_dp"
                        android:layout_marginRight="@dimen/twentyfour_dp"
                        android:onClick="onePointA"
                        android:text="@string/free_throw" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/one_dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/twohundred_dp"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:background="@android:color/darker_gray"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/sixteen_dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:paddingBottom="@dimen/sixteen_dp"
                        android:paddingTop="@dimen/sixteen_dp"
                        android:text="@string/team_b"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/fourteen_sp" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/twentyfour_dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fiftysix_dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/eight_dp"
                        android:layout_marginLeft="@dimen/twentyfour_dp"
                        android:layout_marginRight="@dimen/twentyfour_dp"
                        android:onClick="threePointsB"
                        android:text="@string/plus_three_points" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/eight_dp"
                        android:layout_marginLeft="@dimen/twentyfour_dp"
                        android:layout_marginRight="@dimen/twentyfour_dp"
                        android:onClick="twoPointsB"
                        android:text="@string/plus_two_points" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/twentyfour_dp"
                        android:layout_marginRight="@dimen/twentyfour_dp"
                        android:onClick="onePointB"
                        android:text="@string/free_throw" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/thirtytwo_dp"
                android:onClick="resetButton"
                android:text="@string/reset" />


        </RelativeLayout>
    </ScrollView>
</LinearLayout>
